# expense-tracker-backend

./: README.md  manage.py
app/: factory.py
app/config/: configurations.py
app/rest/: __init__.py  expense_tracker.py
infra/backend/: pyproject.toml
infra/database/adapters/: mappers.py  orm_base.py  orm_expenses.py  orm_incomes.py
infra/database/configs/: __init__.py  engine.py  sessions.py
infra/database/migrations/: env.py
infra/database/repository/: sql.py
tracker/models/: base_model.py  expenses.py  incomes.py
tracker/services/: abstract_repo.py
