[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense tracker app"
authors = ["Joao Victor <jvpereirarocha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2"
SQLAlchemy = "2.0"
alembic = "1.9"
psycopg = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
